implemented webcrawling outline

--- a/webscraper_exploration.ipynb
+++ b/webscraper_exploration.ipynb
@@ -33,7 +33,9 @@
     "\n",
     "- Open website and convvert to HTML\n",
     "- Extract information from HTML\n",
-    "- Advanced operations on websites"
+    "- Advanced operations on websites\n",
+    "    - interactions\n",
+    "    - finding more links"
    ]
   },
   {
@@ -289,6 +291,26 @@
     "browser = ms.Browser()\n",
     "page = browser.get(url)\n",
     "page # page is a response object, showing response of the request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "page.status_code"
    ]
   },
   {
