worked google api into webscraping logic

--- a/googleAPI_exploration.ipynb
+++ b/googleAPI_exploration.ipynb
@@ -39,7 +39,7 @@
     "import os\n",
     "from dotenv import load_dotenv #pip install python-dotenv\n",
     "load_dotenv()\n",
-    "print(f\"key:\\t{os.getenv(\"KEY\")}\\nid:\\t{os.getenv(\"ID\")}\")"
+    "print(f\"key:\\t{os.getenv(\"GOOGLE_KEY\")}\\nid:\\t{os.getenv(\"GOOGLE_ID\")}\")"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "source": [
     "def search(query):\n",
     "    url = \"https://www.googleapis.com/customsearch/v1\"\n",
-    "    params = dict(q = query, key = os.getenv(\"KEY\"), cx = os.getenv(\"ID\"),    # required params\n",
+    "    params = dict(q = query, key = os.getenv(\"GOOGLE_KEY\"), cx = os.getenv(\"GOOGLE_ID\"),    # required params\n",
     "                  dateRestrict = \"d1\") # additional parameters\n",
     "    \n",
     "    response = requests.get(url,params=params,verify=False)\n",
