--- a/t.ipynb
+++ b/t.ipynb
@@ -2,33 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m i \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m0\u001b[39m:[]}\n\u001b[0;32m      3\u001b[0m i[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[43mi\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m i\n",
-      "\u001b[1;31mKeyError\u001b[0m: 1"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ms216u.MUCLVAD1\\OneDrive - Linde Group\\Studium\\Semester 5\\NLP\\Projekt\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1\t[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+       "2\t['eins']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "i = {0:[]}\n",
+    "from vector_db import VectorMetadata\n",
     "\n",
-    "i[0].append(\"a\")\n",
-    "i[1].append(\"b\")\n",
-    "i"
+    "data = VectorMetadata()\n",
+    "\n",
+    "data[1] = [1,2,3,4,5]\n",
+    "data[1] = 6\n",
+    "data[1] = [7,8,9]\n",
+    "data[2] = \"eins\"\n",
+    "\n",
+    "data"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -42,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
