"added entry-point to webscraping and vectorstore"

--- a/t.ipynb
+++ b/t.ipynb
@@ -2,40 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ms216u.MUCLVAD1\\OneDrive - Linde Group\\Studium\\Semester 5\\NLP\\Projekt\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "2025-01-09\n",
+      "2025-01-09\n",
+      "True\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1\t[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-       "2\t['eins']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from vector_db import VectorMetadata\n",
-    "\n",
-    "data = VectorMetadata()\n",
-    "\n",
-    "data[1] = [1,2,3,4,5]\n",
-    "data[1] = 6\n",
-    "data[1] = [7,8,9]\n",
-    "data[2] = \"eins\"\n",
-    "\n",
-    "data"
+    "import os\n",
+    "from datetime import date, datetime\n",
+    "try:\n",
+    "    with open(os.path.join(os.getcwd(),\"vector_storage\",\"timestamp.txt\"),\"r\") as of:\n",
+    "            print(date.today()==datetime.strptime(of.readline(),\"%d/%m/%Y\").date())\n",
+    "except:\n",
+    "      print(\"failed\")"
    ]
   }
  ],
