--- a/t.ipynb
+++ b/t.ipynb
@@ -2,27 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-01-09\n",
-      "2025-01-09\n",
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1\t['A', 'B', 'C']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "from datetime import date, datetime\n",
-    "try:\n",
-    "    with open(os.path.join(os.getcwd(),\"vector_storage\",\"timestamp.txt\"),\"r\") as of:\n",
-    "            print(date.today()==datetime.strptime(of.readline(),\"%d/%m/%Y\").date())\n",
-    "except:\n",
-    "      print(\"failed\")"
+    "from vector_db import VectorMetadata\n",
+    "\n",
+    "data = VectorMetadata()\n",
+    "\n",
+    "data[1] = [\"A\",\"B\"]\n",
+    "data[1] = [\"C\"]\n",
+    "\n",
+    "data"
    ]
   }
  ],
